updated html nav and content

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,3 +7,23 @@
 
 // Then add additional custom code here
 
+
+
+
+// nav stuff
+
+
+
+// photos
+// $thumbnail-padding:                 .25rem;
+// $thumbnail-bg:                      var(--#{$prefix}body-bg);
+// $thumbnail-border-width:            var(--#{$prefix}border-width);
+// $thumbnail-border-color:            var(--#{$prefix}border-color);
+// $thumbnail-border-radius:           var(--#{$prefix}border-radius);
+
+
+
+// colours
+$primary: #eed9c4;
+$secondary: #d9b99b;
+
