--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,40 @@
 @charset "UTF-8";
+.bg-custom-beige {
+  background-color: #d9b99b;
+}
+
+.custom-navbar {
+  background-color: #392A16;
+}
+
+.bg-custom-tan {
+  background-color: #bc9b71;
+}
+
+#menu {
+  margin-top: 200px; /* Adjust the value as needed */
+}
+
+.container-info {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+}
+
+.info1 {
+  grid-area: 1/1/2/3;
+}
+
+.info2 {
+  grid-area: 2/1/3/3;
+}
+
+.div3 {
+  grid-area: 1/3/3/6;
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -80,8 +116,8 @@
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
   --bs-body-color-rgb: 33, 37, 41;
-  --bs-body-bg: #d9b99b;
-  --bs-body-bg-rgb: 217, 185, 155;
+  --bs-body-bg: #fff;
+  --bs-body-bg-rgb: 255, 255, 255;
   --bs-emphasis-color: #000;
   --bs-emphasis-color-rgb: 0, 0, 0;
   --bs-secondary-color: rgba(33, 37, 41, 0.75);
@@ -2457,10 +2493,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #d9b99b, 0 0 0 0.25rem rgba(57, 42, 22, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(57, 42, 22, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #d9b99b, 0 0 0 0.25rem rgba(57, 42, 22, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(57, 42, 22, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -4275,7 +4311,7 @@ textarea.form-control-lg {
 .navbar-dark,
 .navbar[data-bs-theme=dark] {
   --bs-navbar-color: rgba(255, 255, 255, 0.55);
-  --bs-navbar-hover-color: #392A16;
+  --bs-navbar-hover-color: rgba(255, 255, 255, 0.75);
   --bs-navbar-disabled-color: rgba(255, 255, 255, 0.25);
   --bs-navbar-active-color: #fff;
   --bs-navbar-brand-color: #fff;
